package Msg;

message EchoMsg {
        optional uint32 echo_code = 1 [default=77];
        optional string echo_string = 2;
		repeated string echo_vec = 3; 
}

message EchoMsg2 {
        optional string echo_string = 1;
}


/////////////////////////////////////////////
message EchoRequest {
    optional string msg = 1;
}

message EchoResponse {
    optional string msg = 1;
}

service EchoService {
    rpc Echo (EchoRequest) returns (EchoResponse);
    rpc EchoTwice (EchoRequest) returns (EchoResponse);
}
